[progress] APS critical threads and bankruptcy draft

--- a/_posts/math-physics/2021-09-28-lab-tex.md
+++ b/_posts/math-physics/2021-09-28-lab-tex.md
@@ -1,5 +1,5 @@
 ---
-layout: post                                                                    
+layout: post-math
 title: Physics Lab Tex Template
 description: A Physics tex template I made for my physics lab
 categories: [tex, physics]                                                
