--- a/_posts/programming/qnx/2022-04-17-qnx-aps.md
+++ b/_posts/programming/qnx/2022-04-17-qnx-aps.md
@@ -34,6 +34,8 @@ I request it so they may not have received my request).
 
 </details>
 
+<br/>
+
 <a name = "rlimit"/>
 
 ---
@@ -76,6 +78,8 @@ consumption. There are other function calls (non-POSIX) such as `prlimit` to set
 view resource consumption on both QNX and Linux. In fact, `rlimit` function calls are 
 just wrappers to `prlimit()` according to the documentation ([QNX](http://www.qnx.com/developers/docs/7.1/index.html#com.qnx.doc.neutrino.lib_ref/topic/s/setrlimit.html) and [Linux](https://man7.org/linux/man-pages/man2/prlimit.2.html)).
 
+<br/>
+
 <a name = "cgroups"/>
 
 ---
@@ -115,6 +119,8 @@ their left over budget to other partitions to utilize and can be configured at r
 Michael Brown from QNX <a href ="https://devblog.blackberry.com/en/2021/02/thread-scheduling-and-time-partitioning-in-a-qnx-neutrino-rtos-system"> has written a blog illustrating a use case for APS through the 
 example of a fictious medical ventilator</a> that you should check out.
 </details>
+
+<br/>
 
 <a name = "aps"/>
 
@@ -211,6 +217,8 @@ Total               | 100.0% |        |  0.02% |</code>
 </pre>
 </div>
 
+<br/>
+
 <a name = "aps-action"/>
 
 ---
@@ -304,6 +312,10 @@ and shall not be deployed on a production system) to ensure you have access to t
 Since our shell is on the **Recovery** partition, we still can interact with the system despite the system running on full capacity. But what happens if we were to strip the **recovery** partition all of its CPU budget? 
 The answer is that we lose all control of the system and will require to reboot the system. This can be achieved by using the **modify** command in the **aps** utility: `aps modify -b 0 recovery`
 
+<br/>
+
+<a name = "add-check"/>
+
 ---
 
 ## Add and Check Processes's Partitions
@@ -325,6 +337,7 @@ name               pid-tid     ExtSched
 If you simply want to see what partitions each process in your system is running on, you can simply run `pidin sched`. 
 I just used a more compilicated option because I needed both the pid and tid to migrate the thread to another partition.
 
+<br/>
 
 <a name = "loads"/>
 
@@ -367,6 +380,20 @@ Total               | 100.0% |        | <b>2.35%</b>|</code></pre></div>
 
 Freetime occurs when a partition has no READY threads so it lends its CPU time to other partitions that have READY threads. 
 Similarly to the previous case, the scheduler will choose the highest READY priority thread to run because the CPU time will be distributed to other partitions since there are **"freetime"** from one of the partitions. 
+What if all the remaining partitions have the same highest priority? Who gets more of the share of the idling CPU time (i.e. freetime) from the sleeping partition? The scheduler will divide the freetime between the remaining partitions 
+based on the proportions of their allocated (i.e. normal) budget.
+
+<div class="language-plaintext highlighter-rouge">                              
+<pre class = "highlight"><code class = "red"># aps
+                    +-------- CPU Time --------+-- Critical Time --
+Partition name   id | Budget |   Max  |   Used | Budget |   Used
+--------------------+------------------------+---------------------
+System            0 |  50.0% | 100.0% |  0.10% |  200ms |   0.000ms
+Alice             1 |  <b>30.0%</b> | 100.0% | <b>60.85%</b> |    0ms |   0.000ms
+Bob               2 |  <b>20.0%</b> | 100.0% | <b>39.05%</b> |    0ms |   0.000ms
+--------------------+------------------------+---------------------
+Total               | 100.0% |        |100.00% |</code></pre></div>
+<p class = "caption">Notice how the freetime is distributed to the remaining partition based on their proportions of their normal budget</p>
 
 In the sample output below, we have two partitions: Alice and Bob where Bob has two threads with a priority of 20 and Alice has two threads with a lower priority of 10 and the System partition (default partition) isn't using much of 
 its budget so their budget so the CPU time is distributed to other partitions. Notice how threads under Alice gets the minimum 
@@ -388,7 +415,9 @@ Total               | 100.0% |        |100.00% |</code></pre></div>
 <br/>  
 
 A **Full Load** is when all partitions need their entire budget. The default scheduling behavior is 
-to divide the time between the threads in the partition based on the ratio of their budgets.
+to divide the time between the threads in the partition based on the ratio of their budgets. However, 
+there is no guarantee each partition will get billed its share of the CPU because we still need to guarantee 
+real time performance (will be looked at later).
 
 <div class="language-plaintext highlighter-rouge">                              
 <pre class = "highlight"><code class = "red"># aps   
@@ -401,13 +430,79 @@ Alice             1 |  <b>30.0%</b> | 100.0% | <b>30.34%</b> |    0ms |   0.000m
 Bob               2 |  <b>20.0%</b> | 100.0% | <b>19.98%</b> |    0ms |   0.000ms
 --------------------+------------------------+---------------------
 Total               | 100.0% |        |100.00% |</code></pre></div>
+<p class = "caption">Notice how each partition is using based on their assigned budgets</p>
+
+<br/>
+
+<a name = "critical"/>                                                             
+                                                                                
+---                                                                             
+                                                                                
+## Critical Threads 
+                                                                                
+---   
+
+I have been hinting about critical threads a few times and you've been seeing an entire 
+section of the output in `APS` reserved for Critical Time. So you may be asking what is it? 
+
+<div class="language-plaintext highlighter-rouge">                              
+<pre class = "highlight"><code class = "red"># aps                              
+# aps                                                                           
+                    +-------- CPU Time --------+-- <b>Critical Time --</b>             
+Partition name   id | Budget |   Max  |   Used | <b>Budget |   Used</b>
+--------------------+------------------------+---------------------             
+System            0 |  50.0% | 100.0% | 49.68% |  <b>200ms |   0.000ms</b>
+Alice             1 |  30.0% | 100.0% | 30.34% |    <b>0ms |   0.000ms</b>
+Bob               2 |  20.0% | 100.0% | 19.98% |    <b>0ms |   0.000ms</b>
+--------------------+------------------------+---------------------             
+Total               | 100.0% |        |100.00% |</code></pre></div>
+
+QNX is a realtime OS meaning that it needs to be able start and complete its task 
+on time with the most minimal amount of delay. This is where critical threads come into play. 
+A Critical thread is a thread that have "strict realtime requirements" meaning they can be 
+pre-empted to ensure realtime performance.
+
+To achieve this realtime requirements, critical threads by design are allowed to go over 
+the normal budget of a partition provided the partition has a **critical budget**. 
+
+For a partition to go over its budget during a fully loaded system, a critical budget greater than 0ms must be assigned 
+to the partition. A **critical budget** is the number of milliseconds that the critical thread in a partition can consume during 
+the average time window if the partition has exhausted its **normal budget** ([QNX - Critical Threads](http://www.qnx.com/developers/docs/7.1/index.html#com.qnx.doc.adaptivepartitioning.userguide/topic/aps_details_Critical_threads_.html)). 
+Since critical threads are pre-empted, other partitions will not meet its budget (i.e. will not consume their allotted CPU time).
+
+A thread is considered critical in a partition if the thread's priority is at or greater than the 
+critical priority set during the creation of the partition (though you can use `aps modify -P` if you forgot). 
+If the system is not currently overloaded, then the critical budget will not be billed because there's available CPU resources it can take from. 
+A critical budget is billed only if the running partition ran out of budget (provided the partition had a non-zero critical budget) and is competing with at least one other partition for CPU time.
+This means that if there is freetime or the partition has remaining normal budget left, the scheduler will not bill the critical thread for running.
+What happens if a partition exceeds its critical budget? A bankruptcy will occur which will be the next topic.
 
 
-<table>
-<th>
-<td>Partition State</td><td>Default (normal)</td><td>Freetime-by-ratio</td>
-</th>
-</table>
+**Side Note:** If a critical thread is killed, the system crashes ([QNX - on utility with -c options](http://www.qnx.com/developers/docs/7.1/index.html#com.qnx.doc.neutrino.utilities/topic/o/on.html)). 
+Though I am not seeing a connection between APS critical threads and critical threads set by the `on` utility but I will need to investigate more on this.
+
+
+<a name = "bankruptcy"/>                                                             
+<br/>
+                                                                                
+---                                                                             
+                                                                                
+## Bankruptcy
+                                                                                
+---   
+
+What happens when a company runs out of money? It goes bankrupt. 
+Similarly, if a partition is billed for the critical CPU time that exceeds its critical budget, the partition will become bankrupt. 
+There are three ways to handle bankruptcy:
+1. **Basic (default):** deliver bankruptcy notification events and make the partition out of budget for the rest of the scheduling window
+* notify of bankruptcy to the system
+* cannot run till it receives more funding (i.e. budget)
+    * at minimum needs to wait the number of milliseconds the critical budget was set to before it can run again
+2. **Cancel:** Set partition's critical budget to 0ms meaning it cannot use its critical budget
+    * need to restore critical budget if you want to use critical CPU time (i.e. `aps modify -B` or `SCHED_APS_MODIFY_PARTITION` command to the `SchedCtl()`)
+3. **Reboot:** system crash with offending partition (should be used for testing purposes only)
+
+Similarly to how poor business decisions can lead companies to bankruptcy, if a bankruptcy occurs, it is considered the design error of the application.
 
 ---
 
@@ -443,4 +538,8 @@ Partition budgets are enforced only when the CPU is running to capacity. All ava
 * [Bosch Brief Inustry Paper: Dissecting the QNX Adaptive Partitioning Scheduler](https://www.researchgate.net/profile/Dakshina-Dasari/publication/353094266_Brief_Industry_Paper_Dissecting_the_QNX_Adaptive_Partitioning_Scheduler/links/60f68bad9541032c6d50c824/Brief-Industry-Paper-Dissecting-the-QNX-Adaptive-Partitioning-Scheduler.pdf?origin=publication_detail)
 * [EETimes - Adaptive partitioning proposed to secure embedded designs](https://www.eetimes.com/adaptive-partitioning-proposed-to-secure-embedded-designs/#)
 * [QNX - Adaptive Partitioning](http://www.qnx.com/developers/docs/7.1/#com.qnx.doc.neutrino.sys_arch/topic/adaptive.html)
+* [QNX - Critical Threads](http://www.qnx.com/developers/docs/7.1/index.html#com.qnx.doc.adaptivepartitioning.userguide/topic/aps_details_Critical_threads_.html)
+* [Patent US 9,361,156 B2 - DAPTIVE PARTITIONING FOR OPERATING SYSTEM](https://patentimages.storage.googleapis.com/1e/48/86/8d5ca88396617b/US9361156.pdf)
+* [Foundary27 - APS Requirements](https://community.qnx.com/sf/wiki/do/viewPage/projects.core_os/wiki/APS_Requirements)
+* [Foundary27 - APS How it Works](https://community.qnx.com/sf/wiki/do/viewPage/projects.core_os/wiki/APS_How_it_Works_FAQ)
 * [http://www.realtimecontrol.hu/qnx/docs/194.10_Adaptive_Part_TDK.pdf](http://www.realtimecontrol.hu/qnx/docs/194.10_Adaptive_Part_TDK.pdf)
