[blog] Added tldr to MATH2052
Not a very good tldr but I noticed I forgot to add one so I quickly made one up

--- a/_posts/course-reviews/2022-04-30-math2052.md
+++ b/_posts/course-reviews/2022-04-30-math2052.md
@@ -13,9 +13,9 @@ comfortable and available to travel to the University.
 **Note: The course was taken in 2022 during the pandemic so my experiences may be unique**
 
 **TLDR:**
-* 
-* 
-* 
+* Less theoretical compared to MATH1052
+* Assignments heavily depend on the tutorial that is held 2 days before it's due
+* Covers integrals, sequences and series more in-depth compared to normal/regular Calculus
 
 ---                                                                             
 
