[Edit] Add constant to indefinite integral example
Forgot that in my example, I needed to add a constant since I am dealing with an indefinite integral

--- a/_posts/course-reviews/2022-04-30-math2052.md
+++ b/_posts/course-reviews/2022-04-30-math2052.md
@@ -116,7 +116,7 @@ $$
 \int \sin(x)\cos(x)dx &= \sin^2(x) - \int \sin(x)\cos(x)dx \\
 I &= \sin^2(x) - I \\
 2I &= \sin^2(x) \\
-I &= \frac{1}{2}\sin^2(x)
+I &= \frac{1}{2}\sin^2(x) + C
 \end{align*}
 $$
 </center>
