[layout] Remove mathjax references to default layout

--- a/_posts/course-reviews/2022-01-01-math1152.md
+++ b/_posts/course-reviews/2022-01-01-math1152.md
@@ -1,7 +1,7 @@
 ---
-layout: review
+layout: review-math
 title: MATH1152 - Introductory Algebra 1
-description: A course review on Honors Math Linear Algebra 1
+description: A course review on Honors Math Linear Algebra 1 at CarletonU
 categories: [university, school, math, reviews, carletonU]
 ---
 
@@ -68,7 +68,7 @@ and in university where I had to calculate the gcd of a ridiculously large numbe
 
 
 The next topic that is covered is complex numbers such as how to add, multiply, divide complex numbers and convert complex to other forms such as 
-rectangular (z = a + bi) to polar ($r(cos\theta + i\sin\theta)$) and exponential form ($z = re^{i\theta}$) and finding the roots of complex numbers. 
+rectangular (z = a + bi) to polar ($r(\cos\theta + i\sin\theta)$) and exponential form ($z = re^{i\theta}$) and finding the roots of complex numbers. 
 This unit is not hard to grasp and you will relearn this concept probably in other courses. The material covered for this unit was also covered in 
 the linear algebra course I took many years ago so I assume learning complex numbers is standard in linear algebra. Though I never understood what 
 the purpose was because we always operated in the reals in the course.
