--- a/_posts/course-reviews/2022-01-01-phys1001.md
+++ b/_posts/course-reviews/2022-01-01-phys1001.md
@@ -1,7 +1,7 @@
 ---
-layout: review
+layout: review-math
 title: PHYS1001 - A Review on Foundations of Physics 1
-description: A course review on PHYS1001
+description: A course review on PHYS1001, a Physics course at CarletonU
 categories: [university, school, physics, reviews, carletonU]
 ---
 
