--- a/_posts/course-reviews/2022-01-01-math1052.md
+++ b/_posts/course-reviews/2022-01-01-math1052.md
@@ -1,7 +1,7 @@
 ---
-layout: review
+layout: review-math
 title: MATH1052 - Calculus and Introductory Analysis 1
-description: A course review on a Calculus course for Math honors students
+description: A course review on a Calculus course for Math honors students at CarletonU
 categories: [university, school, math, reviews, carletonU]
 ---
 
